--- a/android-engineer.html
+++ b/android-engineer.html
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -86,7 +86,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4368807002'>Job Application for Senior Android Engineer - Content and Partners team at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4368807002'>Job Application for Senior Android Engineer - Content and Partners team at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -162,7 +162,7 @@ Machine Learning Experience; Knowledge of the Android SDK performance tools
 <p><span class="badge badge-light">San Francisco, CA Vancouver, BC</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foodpandasingapore/jobs/1782767'>Job Application for Senior Android Engineer  at foodpanda Singapore</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -249,7 +249,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/eaze/6c69f698-d8df-49e1-b9ac-2d482ffb0cd3'>Eaze - Native Android and React Native Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/eaze/6c69f698-d8df-49e1-b9ac-2d482ffb0cd3'>Eaze - Native Android and React Native Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -274,7 +274,7 @@ workforces with GoSpotCheck. Our software helps teams perfect merchandising,
 <p>Jun 28, 2019 ... Because Ultra/Mint Mobile is looking for our next extraordinary Senior Android 
 Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691461223-senior-android-engineer'>4Catalyzer Senior Android Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999691461223-senior-android-engineer'>4Catalyzer Senior Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-10</p>
 <hr/>
@@ -282,7 +282,7 @@ Engineer to level up our Apps Team in Costa Mesa! You'll be leading?...</p>
 <p><span class="badge badge-light">San Francisco, CA Mountain View, CA Seattle, WA</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<h5><a href='http://saavn.applytojob.com/apply/AetIdf3hBd/Android-Engineering-Manager'>Android Engineering Manager - Saavn - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://saavn.applytojob.com/apply/AetIdf3hBd/Android-Engineering-Manager'>Android Engineering Manager - Saavn - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai New York California Mumbai Bangalore</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -311,7 +311,7 @@ Evangelist - Mobile Studio Manchester; Streamline Performance Tool Developer.</p
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngDCBKwl&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngDCBKwl&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -336,7 +336,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
+<h5><a href='https://codelitt-incubator.workable.com/jobs/1065844'>Android/iOS Engineer - Apply online - Codelitt Incubator - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>23 hours ago ... Apply online for the job of Android/iOS Engineer at Codelitt Incubator.</p>
 <hr/>
@@ -384,7 +384,7 @@ developer. You're experienced when it comes to improving your colleagues?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/virginpulse/job/oF6nafw2'>Virgin Pulse Careers - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/virginpulse/job/oF6nafw2'>Virgin Pulse Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-28</p>
 <hr/>
